fix scrollbar issue
fix longer sections showing scrollbar while others not which cuses tiny bit of right shift

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,6 +124,10 @@
     transition: color 350ms ease, background-color 350ms ease;
   }
 
+  html {
+    scrollbar-gutter: stable;
+  }
+
   html * {
     transition: color 350ms ease, background-color 350ms ease, border-color 350ms ease, opacity 350ms ease, transform 350ms ease;
   }
